Added Loans view with read and apply for loan functionality